@@ -8,4 +8,7 @@ class User
   has_one :account, :foreign_key => :creator_id
   has_many :posts, :foreign_key => :author_id
   has_many :descriptions
+
+  has_and_belongs_to_many :followed_shops, :inverse_of => :followers, :class_name => "Shop"
+  has_one :shop
 end
